final fixing layout mobile device

--- a/index.html
+++ b/index.html
@@ -35,18 +35,7 @@
               alt="logo"
               draggable="false"
           /></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <div class="dropdown">
@@ -75,6 +64,12 @@
                 <a class="nav-link" href="#">LOGIN</a>
               </li>
             </ul>
+          </div>
+          <div class="menu-toggle">
+            <input type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
           </div>
         </div>
       </nav>
@@ -137,9 +132,7 @@
                       -- embark on an expedition to colonize a distant planet.
                       When they uncover disturbing secrets about the mission,
                       they defy their training and begin to explore their most
-                      primitive natures. As life on the ship descends into
-                      chaos, they soon become consumed by fear, lust and an
-                      insatiable hunger for power.
+                      primitive natures.
                     </p>
                     <a
                       class="play_trailer"
@@ -340,9 +333,9 @@
             </div>
             <div class="col-md-6 link">
               <div class="link_section">
-                <a href="#trending">Trending</a>
-                <a href="#popular">What’s Popular</a>
-                <a href="#rated ">High Rated</a>
+                <a href="./#trending">Trending</a>
+                <a href="./#populars">What’s Popular</a>
+                <a href="./#rated ">High Rated</a>
               </div>
             </div>
           </div>
@@ -385,7 +378,7 @@
     <footer>
       <section id="footer">
         <div class="container">
-          <div class="row title_rated">
+          <div class="row footer_logo">
             <img src="./assets/logo/BoxFilm’s.svg" alt="logo" />
           </div>
           <div class="row credit">
