--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="row slides">
                   <img
                     class="banner_img"
-                    src="./assets/images/main banner.svg"
+                    src="./assets/images/main banner.png"
                     alt="The Falcon and The Winter Soldier"
                     draggable="false"
                   />
@@ -119,7 +119,7 @@
                 <div class="row slides">
                   <img
                     class="banner_img"
-                    src="./assets/images/main banner 1.svg"
+                    src="./assets/images/main banner 1.png"
                     alt="Voyagers"
                     draggable="false"
                   />
@@ -152,7 +152,7 @@
                 <div class="row slides">
                   <img
                     class="banner_img"
-                    src="./assets/images/main banner 2.svg"
+                    src="./assets/images/main banner 2.png"
                     alt="Godzilla vs. Kong"
                     draggable="false"
                   />
@@ -184,7 +184,7 @@
                 <div class="row slides">
                   <img
                     class="banner_img"
-                    src="./assets/images/main banner 3.svg"
+                    src="./assets/images/main banner 3.png"
                     alt="Tom Clancy's Without Remorse"
                     draggable="false"
                   />
